--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <div class="collapse navbar-collapse" id="tmMainNav">
                 <ul class="navbar-nav mx-auto tm-navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link external" href="useQ&A.html">Antibiotic Use Q&A</a>
+                    <a class="nav-link external" href="index.html">Antibiotic Use Q&A</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link external" href="dosanddonts.html">Antibiotic Do's and Don'ts</a>
