--- a/dosanddonts_print.html
+++ b/dosanddonts_print.html
@@ -48,28 +48,11 @@
               <div class="collapse navbar-collapse" id="tmMainNav">
                 <ul class="navbar-nav mx-auto tm-navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#home"
-                      >English <span class="sr-only">English</span></a
-                    >
+                    <a class="nav-link external" href="index.html">Antibiotic Use Q&A</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="tagalog.html">Tagalog</a>
+                    <a class="nav-link external" href="dosanddonts.html">Antibiotic Do's and Don'ts</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="ilocano.html">Ilocano</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="maguindanaon.html">Maguindanaon</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#company">Print</a>
-                  </li>
-                  <!-- <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
-                  </li> -->
-                  <!-- <li class="nav-item">
-                    <a class="nav-link external" href="https://www.facebook.com/templatemo">FB Page</a>
-                  </li> -->
                 </ul>
               </div>
             </nav>
