--- a/index.html
+++ b/index.html
@@ -122,8 +122,10 @@
             <h5 style="
             border: 1px solid #c6c6c6;
             border-radius: 0;
-            background-color: transparent;
-            color: #302f2f;
+            /* border-color: dodgerblue; */
+            background-color: rgb(5, 110, 214);
+            color: white;
+            
             padding: 10px 30px;"><b>Bacteria are germs. They live in the environment and all over the inside and outside of our bodies. Most bacteria are harmless and even helpful to people, but some can cause infections, like strep throat.</b></h5>
           </p>
     </div>
@@ -137,7 +139,7 @@
             <h3 class="tm-feature-h"><b>What DO antibiotics treat?</b></h3>
           </div>
         </div>
-        <div class="col-lg-12">
+        <div class="col-lg-6">
           <div class="tm-activity-block">
             <div class="tm-activity-img-container">
               <img src="img/img-01.jpg" alt="Image" class="tm-activity-img" />
