--- a/dosanddonts.html
+++ b/dosanddonts.html
@@ -49,10 +49,10 @@
               <div class="collapse navbar-collapse" id="tmMainNav">
                 <ul class="navbar-nav mx-auto tm-navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link external" href="index.html">Antibiotic Use Q&A</a>
+                    <a class="nav-link external" href="index.html" style="text-align: center;">Antibiotic <br> Use Q&A</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link external" href="dosanddonts.html">Antibiotic Do's and Don'ts</a>
+                    <a class="nav-link external" href="dosanddonts.html" style="text-align: center;">Antibiotic <br> Do's and Don'ts</a>
                   </li>
                   <!-- <li class="nav-item">
                     <a class="nav-link external" href="ilocano.html">Ilocano</a>
@@ -374,12 +374,15 @@
     </section>
     <footer class="container tm-footer">
       <div class="row tm-footer-row">
-        <p class="col-md-10 col-sm-12 mb-0">
+        <h8 class="col-md-10 col-sm-12 mb-0">
           Rural Health Unit Contact Details : <br>
           <i class="fas fa-map-marked-alt"></i> MPXH+5MG, President Quirino, Sultan Kudarat |
           <i class="fas fa-phone"></i> 0999923455
-          <!-- <a rel="nofollow" href="https://www.facebook.com/tooplate" class="tm-footer-link">Tooplate</a> -->
-        </p>
+          <br>
+          <br>
+          References :
+          <a rel="nofollow" href="https://www.cdc.gov/" class="tm-footer-link"><b>www.cdc.gov</b></a>
+        </h8>
         <div class="col-md-2 col-sm-12 scrolltop">
           <div class="scroll icon"><i class="fa fa-4x fa-angle-up"></i></div>
         </div>
