--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
       }
     </style>
 
+  <script> 
+    $(function(){
+      $("#navbar").load("navbar.html"); 
+    });
+  </script>
+
     <!-- https://fonts.google.com/specimen/Open+Sans -->
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- https://fontawesome.com/ -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- https://getbootstrap.com/ -->
     <link rel="stylesheet" href="css/tooplate-style.css" />
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
   </head>
 
   <body>
@@ -80,31 +84,31 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
 
-              <div class="collapse navbar-collapse" id="tmMainNav">
-                <ul class="navbar-nav mx-auto tm-navbar-nav">
-                  <li class="nav-item active">
-                    <a class="nav-link external" href="index.html">Antibiotic Use Q&A</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link external" href="dosanddonts.html">Antibiotic Do's and Don'ts</a>
-                  </li>
-                  <!-- <li class="nav-item">
-                    <a class="nav-link external" href="ilocano.html">Ilocano</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link external" href="maguindanaon.html">Maguindanaon</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="english_print.html" rel="" target="_blank" class="nav-link external">Print</a>
-                  </li> -->
-                  <!-- <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
-                  </li> -->
-                  <!-- <li class="nav-item">
-                    <a class="nav-link external" href="https://www.facebook.com/templatemo">FB Page</a>
-                  </li> -->
-                </ul>
-              </div>
+                <div class="collapse navbar-collapse" id="tmMainNav">
+                  <ul class="navbar-nav mx-auto tm-navbar-nav">
+                    <li class="nav-item active">
+                      <a class="nav-link external" href="index.html" style="text-align: center;">Antibiotic Use Q&A</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link external" href="dosanddonts.html" style="text-align: center;">Antibiotic Do's and Don'ts</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link external" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contact : <b>09154687954</b></a>
+                    </li>
+                    <!-- <li class="nav-item">
+                      <a class="nav-link external" href="maguindanaon.html">Maguindanaon</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="english_print.html" rel="" target="_blank" class="nav-link external">Print</a>
+                    </li> -->
+                    <!-- <li class="nav-item">
+                      <a class="nav-link" href="#contact">Contact</a>
+                    </li> -->
+                    <!-- <li class="nav-item">
+                      <a class="nav-link external" href="https://www.facebook.com/templatemo">FB Page</a>
+                    </li> -->
+                  </ul>
+                </div>
             </nav>
           </div>
         </div>
@@ -453,11 +457,11 @@
     <footer class="container tm-footer">
       <div class="row tm-footer-row">
         <h8 class="col-md-10 col-sm-12 mb-0">
-          Rural Health Unit Contact Details : <br>
+          <!-- Rural Health Unit Contact : <br>
           <i class="fas fa-map-marked-alt"></i> MPXH+5MG, President Quirino, Sultan Kudarat |
           <i class="fas fa-phone"></i> 0999923455
           <br>
-          <br>
+          <br> -->
           References :
           <a rel="nofollow" href="https://www.cdc.gov/" class="tm-footer-link"><b>www.cdc.gov</b></a>
         </h8>
