adding ilocano dialect and some changes

--- a/ilocano-dosanddonts.html
+++ b/ilocano-dosanddonts.html
@@ -49,10 +49,10 @@
               <div class="collapse navbar-collapse" id="tmMainNav">
                 <ul class="navbar-nav mx-auto tm-navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link external" href="index.html" style="text-align: center;">Antibiotic <br> Use Q&A</a>
+                    <a class="nav-link external" href="ilocano-useQ&A.html" style="text-align: center;">Antibiotic <br> Use Q&A</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link external" href="dosanddonts.html" style="text-align: center;">Antibiotic <br> Do's and Don'ts</a>
+                    <a class="nav-link external" href="ilocano-dosanddonts.html" style="text-align: center;">Antibiotic <br> Do's and Don'ts</a>
                   </li>
                   <li class="nav-item">
                     <p class="nav-link" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br> <span style="font-size: smaller;"> MPXH+5MG, President Quirino, Sultan Kudarat </span><br><span style="font-size: smaller;"> 09171440838 | 09068082618</span></p></li>
@@ -107,10 +107,10 @@
           <header class="tm-feature-header">
             <!-- <i class="fas fa-5x fa-anchor tm-feature-icon"></i> -->
             <i class="fas fa-2x fa-solid fa-capsules"></i>
-            <h3 class="tm-feature-h"> What You Can Do</h3>
+            <h3 class="tm-feature-h"> No ania ti maaramidam</h3>
           </header>
           <p>
-            Smart use of antibiotics is the best care. Here are some steps you can take to use antibiotics appropriately so you can get the best treatment when you’re sick, protect yourself from harms caused by unnecessary antibiotic use, and combat antibiotic resistance.
+            smart ti panagusar kadagiti antibiotiko ket isu ti kasayaatan a panangaywan. Adtoy ti sumagmamano nga addang a mabalinmo nga aramiden tapno mausarmo a maitutop dagiti antibiotiko tapno magun-odmo ti kasayaatan a panangagas no masakitka, salaknibam ti bagim manipud kadagiti pannakadangran a patauden ti di kasapulan a panagusar iti antibiotiko, ken manglaban iti resistensia iti antibiotiko.
           </p>
     </div>
 
@@ -120,7 +120,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="tm-activity-block-text">
-            <h3 class="tm-feature-h"><b>Take antibiotics ONLY if you need them.</b></h3>
+            <h3 class="tm-feature-h"><b>Mangala laeng kadagiti antibiotiko no kasapulam dagitoy.</b></h3>
           </div>
         </div>
         <div class="col-lg-6">
@@ -129,7 +129,7 @@
               <img src="img/img-01.jpg" alt="Image" class="tm-activity-img" />
             </div>
             <div class="tm-activity-block-text">
-              <h3 class="tm-text-dark"><b>Antibiotics ONLY treat certain infections caused by bacteria</b>, such as:
+              <h3 class="tm-text-dark"><b>Antibiotics laeng ti mangagas iti sumagmamano nga impeksion a gapuanan ti bakteria</b>, kas iti:
               </h3>
               <p>
                 <ul>
@@ -147,14 +147,14 @@
               <img src="img/img-02.jpg" alt="Image" class="tm-activity-img" />
             </div>
             <div class="tm-activity-block-text">
-              <h3 class="tm-text-dark"><b>Antibiotics DO NOT work on viruses</b>, such as those that cause:
+              <h3 class="tm-text-dark"><b>SAAN nga agtrabaho dagiti antibiotiko kadagiti virus</b>, kas kadagiti pakaigapuan ti:
               </h3>
               <p>
                 <ul>
-                  <li>Colds and runny noses, even if the mucus is thick, yellow, or green</li>
-                  <li>Most sore throats (except strep throat)</li>
-                  <li>Flu</li>
-                  <li>Most cases of chest colds (bronchitis)</li>
+                  <li>Lamiis ken panagayus ti agong, uray no napuskol, duyaw, wenno berde ti mucus</li>
+                  <li>Kaaduan a sakit ti karabukob (malaksid iti strep throat)</li>
+                  <li>Trangkaso</li>
+                  <li>Kaaduan a kaso ti panateng ti barukong (bronchitis)</li>
                 </ul>
               </p>
             </div>
@@ -166,11 +166,11 @@
               <img src="img/img-03.jpg" alt="Image" class="tm-activity-img" />
             </div>
             <div class="tm-activity-block-text">
-              <h3 class="tm-text-dark"><b>Antibiotics also ARE NOT needed for some common bacterial infections</b>, including:</h3>
+              <h3 class="tm-text-dark"><b>SAAN met a kasapulan dagiti antibiotiko para iti sumagmamano a gagangay nga impeksion ti bakteria</b>, agraman:</h3>
               <p>
                 <ul>
-                  <li>Many sinus infections</li>
-                  <li>Some ear infections</li>
+                  <li>Adu nga impeksion ti sinus</li>
+                  <li>Sumagmamano nga impeksion ti lapayag</li>
                 </ul>
               </p>
             </div>
@@ -182,7 +182,7 @@
               <img src="img/img-07.jpg" alt="Image" class="tm-activity-img" />
             </div>
             <div class="tm-activity-block-text">
-              <p class="tm-text-dark">Taking antibiotics when they’re not needed won’t help you, and their side effects can still cause harm. Your doctor can decide the best treatment for you when you’re sick. Never pressure your doctor to prescribe an antibiotic.</p>
+              <p class="tm-text-dark">Ti panagtomar iti antibiotiko no saan a kasapulan ket saan a makatulong kenka, ken dagiti epektoda ket mabalin latta a mangpataud iti pannakadangran. Mabalin nga ikeddeng ti doktormo ti kasayaatan a panangagas para kenka no masakitka. Dimo pulos piliten ti doktormo a mangireseta iti antibiotiko.</p>
             </div>
           </div>
         </div>
@@ -190,24 +190,24 @@
         <div class="container tm-features-section" id="features">
           <section class="col-sm-12">
             <header class="tm-feature-header">
-              <h3 class="tm-feature-h"><b>Take antibiotics exactly as prescribed if you need them.</b></h3>
+              <h3 class="tm-feature-h"><b>Alaem dagiti antibiotiko nga eksakto a kas naireseta no kasapulam dagitoy.</b></h3>
             </header>
             <p>
-              If your doctor decides an antibiotic is the best treatment when you’re sick:
+              No ti doktormo ket mangikeddeng ti maysa nga antibiotiko ti kasayaatan a panangagas no masakitka:
               <ul>
-                <li>Take them exactly as your doctor tells you.</li>
-                <li>Do not share your antibiotics with others.</li>
-                <li>Do not save them for later. Talk to your pharmacist about safely discarding leftover medicines.</li>
-                <li>Do not take antibiotics prescribed for someone else. This may delay the best treatment for you, make you even sicker, or cause side effects.</li>
+                <li>Alaem ida nga eksakto a kas iti ibaga kenka ti doktormo.</li>
+                <li>Saanmo nga ibinglay dagiti antibiotikom kadagiti dadduma.</li>
+                <li>Saan nga isalakan ida para iti maudi. Kasaritam ti parmasiutika maipapan iti natalged a panangibelleng kadagiti nabati nga agas.</li>
+                <li>Saan nga agtomar iti antibiotiko a naireseta para iti sabali. Daytoy ti mabalin a mangpabayag iti kasayaatan a panangagas kenka, mangpasakit pay kenka, wenno mangpataud kadagiti dakes nga epekto.</li>
               </ul>
-              Talk with your doctor and pharmacist if you have any questions about your antibiotics.
+              Kasaritam ti doktor ken parmasiutiko no adda saludsodmo maipapan kadagiti antibiotikom.
             </p>
         </div>
 
 
         <div class="col-lg-12">
           <div class="tm-activity-block-text">
-            <h3 class="tm-feature-h"><b>Talk with your doctor if you develop any side effects or allergic reactions while taking an antibiotic.</b></h3>
+            <h3 class="tm-feature-h"><b>Agsaritaka iti doktormo no maaddaanka iti aniaman nga epekto wenno allergic reactions bayat ti panagtomarmo iti antibiotiko.</b></h3>
           </div>
         </div>
         <div class="col-lg-6">
@@ -216,14 +216,14 @@
               <img src="img/img-04.jpg" alt="Image" class="tm-activity-img" />
             </div>
             <div class="tm-activity-block-text">
-              <h3 class="tm-text-dark">Common side effects range from minor to very severe health problems and can include:
+              <h3 class="tm-text-dark">Dagiti gagangay nga epekto ket manipud iti bassit agingga iti nakaro unay a parikut iti salun-at ken mabalin a mairaman ti:
               </h3>
               <p>
                 <ul>
                   <li>Rash</li>
                   <li>Nausea</li>
                   <li>Diarrhea</li>
-                  <li>Yeast infections</li>
+                  <li>Impeksion ti Daya</li>
                 </ul>
               </p>
             </div>
@@ -235,13 +235,13 @@
               <img src="img/img-05.jpg" alt="Image" class="tm-activity-img" />
             </div>
             <div class="tm-activity-block-text">
-              <h3 class="tm-text-dark">More serious side effects can include:
+              <h3 class="tm-text-dark">Dagiti nakarkaro nga epekto ket mabalin a pakairamanan ti:
               </h3>
               <p>
                 <ul>
-                  <li>C. diff infection, which causes diarrhea that can lead to severe colon damage and death</li>
-                  <li>Severe and life-threatening allergic reactions</li>
-                  <li>Antibiotic-resistant infections</li>
+                  <li>C. Ti impeksion ti diff, a pakaigapuan ti panagtakki a mabalin a mangiturong iti nakaro a pannakadadael ti kolon ken ipapatay</li>
+                  <li>nakaro ken mamagpeggad-biag nga allergic reactions</li>
+                  <li>antibiotic-resistant infections</li>
                 </ul>
               </p>
             </div>
@@ -251,17 +251,17 @@
         <div class="container tm-features-section mt-0" id="features">
           <section class="col-sm-12">
             <p>
-              If you need antibiotics, the benefits usually outweigh the risks of side effects and antibiotic resistance.
+              No kasapulam dagiti antibiotiko, dagiti pagimbagan ket kadawyan a manglab-aw kadagiti peggad ti epekto ken antibiotiko a resistensia.
             </p>
         </div>
 
         <div class="container tm-features-section" id="features">
           <section class="col-sm-12">
             <header class="tm-feature-header">
-              <h3 class="tm-feature-h"><b>Ask your doctor or pharmacist about ways to feel better if an antibiotic isn’t needed.</b></h3>
+              <h3 class="tm-feature-h"><b>Saludsodem iti doktor wenno parmasiutiko maipapan kadagiti wagas tapno sumayaat ti riknam no saan a kasapulan ti antibiotiko.</b></h3>
             </header>
             <p>
-              Antibiotics aren’t always the answer when you’re sick. Sometimes, the best treatment when you’re sick may be over-the-counter medication. Ask your doctor or pharmacist for tips on how to feel better while your body fights off an infection.
+              Saan a kanayon a sungbat dagiti antibiotiko no masakitka. No dadduma, ti kasayaatan a panangagas no masakitka ket mabalin nga agas nga awan ti reseta. Agkiddawka iti doktor wenno parmasiutiko kadagiti tips no kasano a sumayaat ti riknam bayat a labanan ti bagim ti impeksion.
             </p>
         </div>
         
@@ -278,17 +278,17 @@
             </div>
             <div class="tm-company-about-text">
               <header>
-                <h2 class="tm-company-about-header">Do your best to stay healthy and keep others healthy.</h2>
+                <h2 class="tm-company-about-header">Aramidem ti amin a kabaelam tapno agtalinaed a nasalun-at ken agtalinaed a nasalun-at ti dadduma.</h2>
               </header>
               <p>
-                There are steps you can take to avoid getting yourself and others sick, including:
+                Adda dagiti addang a mabalinmo nga aramiden tapno maliklikan ti panagsakit ti bagim ken ti dadduma, pakairamanan:
                 <ul>
-                  <li>Clean your hands.</li>
-                  <li>Cover your mouth and nose when coughing or sneezing.</li>
-                  <li>Stay home when you’re sick.</li>
-                  <li>Avoid touching your eyes, nose, and mouth with unwashed hands.</li>
-                  <li>Avoid close contact with people who have colds or other upper respiratory infections.</li>
-                  <li>Get recommended vaccines, such as the flu vaccine.</li>
+                  <li>Dalusan dagiti imam.</li>
+                  <li>Kaluban ti ngiwat ken agongmo no agsarua wenno ag-aangsan.</li>
+                  <li>Agtalinaedka iti pagtaengan no sika... 're sick.</li>
+                  <li>Liklikan ti panangsagid kadagiti matam, agong, ken ngiwat babaen kadagiti saan a nabugguan nga ima.</li>
+                  <li>Liklikan ti nasinged a pannakilangen kadagiti tattao nga addaan iti panateng wenno dadduma pay nga impeksion ti makinngato a bara.</li>
+                  <li>Agala kadagiti mairekomendar a bakuna, kas iti bakuna ti trangkaso.</li>
                 </ul>
                 
               </p>
