--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
       }
     </style>
 
-  <script> 
-    $(function(){
-      $("#navbar").load("navbar.html"); 
-    });
-  </script>
-
     <!-- https://fonts.google.com/specimen/Open+Sans -->
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- https://fontawesome.com/ -->
@@ -53,9 +47,9 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <a href="">Tagalog</a> |
-                <a href="">Ilocano</a> |
-                <a href="">Maguindanaon</a>
+                <a href="tagalog-useQ&A.html">Tagalog | </a>
+                <a href="ilocano-useQ&A.html">Ilocano | </a>
+                <a href="maguindanaon-useQ&A.html">Maguindanaon</a>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-success" data-bs-dismiss="modal">English</button>
@@ -93,7 +87,7 @@
                       <a class="nav-link external" href="dosanddonts.html" style="text-align: center;">Antibiotic Do's and Don'ts</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link external" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contact : <b>09154687954</b></a>
+                      <p class="nav-link" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br> <span style="font-size: smaller;"> MPXH+5MG, President Quirino, Sultan Kudarat </span><br><span style="font-size: smaller;"> 09171440838 | 09068082618</span></p></li>
                     </li>
                     <!-- <li class="nav-item">
                       <a class="nav-link external" href="maguindanaon.html">Maguindanaon</a>
@@ -126,6 +120,7 @@
                 The video background has a parallax effect. This is fluid and
                 full-width.
               </p> -->
+              <!-- <span class="nav-link external" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br><i class="fas fa-map-marked-alt"></i> <span style="font-size: smaller;">MPXH+5MG, President Quirino, Sultan Kudarat</span><br><i class="fas fa-phone"></i> <span style="font-size: smaller;">09171440838 or 09068082618</span></span> -->
             </header>
           </div>
         </div>
@@ -140,9 +135,9 @@
 
     <div class="text-center">
     <a href="useQ&A_print.html">Print | </a>
-    <a href="#">Tagalog | </a>
-    <a href="#">Ilocano | </a>
-    <a href="#">Maguindanaon</a>
+    <a href="tagalog-useQ&A.html">Tagalog | </a>
+    <a href="ilocano-useQ&A.html">Ilocano | </a>
+    <a href="maguindanaon-useQ&A.html">Maguindanaon</a>
     </div>
 
     <!-- Features -->
