fixing dialect landing page

--- a/ilocano-dosanddonts.html
+++ b/ilocano-dosanddonts.html
@@ -96,8 +96,9 @@
 
     <div class="text-center">
     <a href="dosanddonts_print.html">Print | </a>
+    <a href="dosanddonts.html">English | </a>
     <a href="tagalog-dosanddonts.html">Tagalog | </a>
-    <a href="ilocano-dosanddonts.html">Ilocano | </a>
+    <!-- <a href="ilocano-dosanddonts.html">Ilocano | </a> -->
     <a href="maguindanaon-dosanddonts.html">Maguindanaon</a>
     </div>
 
