--- a/ilocano-useQ&A.html
+++ b/ilocano-useQ&A.html
@@ -116,8 +116,9 @@
 
     <div class="text-center">
       <a href="ilocanouseQ&A_print.html">Print | </a>
+      <a href="index.html">English | </a>
       <a href="tagalog-useQ&A.html">Tagalog | </a>
-      <a href="ilocano-useQ&A.html">Ilocano | </a>
+      <!-- <a href="ilocano-useQ&A.html">Ilocano | </a> -->
       <a href="maguindanaon-useQ&A.html">Maguindanaon</a>
     </div>
 
