adding minor changes

--- a/ilocano-useQ&A.html
+++ b/ilocano-useQ&A.html
@@ -222,6 +222,31 @@
         </div>
 
 
+        <div class="container tm-features-section" id="features">
+          <section class="col-sm-12">
+            <header class="tm-feature-header">
+              <h3 class="tm-feature-h"><b>Inya ti mangyari nu aginom tayu ti antibiotiko duray nu madi tayo masapol?</b></h3>
+            </header>
+            <p>
+              <ul>
+                <li>Ti panagtomar kadagiti di kasapulan nga antibiotiko ket mabalin nga agtungpal iti resistensia iti antibiotiko agraman dagiti posible nga epekto.</li>
+                <li>Saanmo koma a pagbutngan dagiti antibiotiko, ngem kasapulan nga usarentayo dagitoy a responsable tapno masigurado nga agtultuloyda nga agtrabaho inton kasapulantayo dagitoy iti masanguanan.</li>
+              </ul>
+            </p>
+        </div>
+
+
+        <div class="container tm-features-section" id="features">
+          <section class="col-sm-12">
+            <header class="tm-feature-header">
+              <h3 class="tm-feature-h"><b>Ania ti mapasamak no saantayo a malpas ti antibiotiko a rehimentayo?</b></h3>
+            </header>
+            <p>
+              No isardengyo ti panangagas sakbay a malpas ti siklo ti antibiotiko, mabalin nga agtultuloy nga umadu dagiti nabati a bakteria. No dagitoy a bakteria ket agbalin a naandur kadagiti antibiotiko, mabalin nga ad-adda pay a makadangran dagitoy. Mabalin a napapaut ti panagimbagmo iti sakitmo, ket mabalin a masapul nga ireseta ti doktormo ti ad-adu pay nga agas.
+            </p>
+        </div>
+
+
         <div class="col-lg-12">
           <div class="tm-activity-block-text-header">
             <h3 class="tm-feature-h"><b>Ania dagiti dakes nga epekto ti antibiotiko?</b></h3>
