--- a/index.html
+++ b/index.html
@@ -240,6 +240,31 @@
         </div>
 
 
+        <div class="container tm-features-section" id="features">
+          <section class="col-sm-12">
+            <header class="tm-feature-header">
+              <h3 class="tm-feature-h"><b>What will happen if we take antibiotics even if we don't need them?</b></h3>
+            </header>
+            <p>
+              <ul>
+                <li>Taking unnecessary antibiotics can lead to antibiotic resistance as well as possible side effects.</li>
+                <li>You shouldn’t fear antibiotics, but we do need to use them responsibly to ensure they continue working when we need them in the future.</li>
+              </ul>
+            </p>
+        </div>
+
+
+        <div class="container tm-features-section" id="features">
+          <section class="col-sm-12">
+            <header class="tm-feature-header">
+              <h3 class="tm-feature-h"><b>What will happen if we don't finish our antibiotic regimen?</b></h3>
+            </header>
+            <p>
+              If you stop treatment before the antibiotic cycle is over, the remaining bacteria can continue to multiply. If these bacteria become resistant to the antibiotics, they can potentially do even more harm. It may take longer for you to recover from your illness, and your physician may have to prescribe more medication.
+            </p>
+        </div>
+
+
         <div class="col-lg-12">
           <div class="tm-activity-block-text-header">
             <h3 class="tm-feature-h"><b>What are the side effects of antibiotics?</b></h3>
