--- a/maguindanaon-dosanddonts.html
+++ b/maguindanaon-dosanddonts.html
@@ -55,7 +55,7 @@
                     <a class="nav-link external" href="maguindanaon-dosanddonts.html" style="text-align: center;">Antibiotic <br> Do's and Don'ts</a>
                   </li>
                   <li class="nav-item">
-                    <p class="nav-link" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br> <span style="font-size: smaller;"> MPXH+5MG, President Quirino, Sultan Kudarat </span><br><span style="font-size: smaller;"> 09171440838 | 09068082618</span></p></li>
+                    <p class="nav-link" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br> <span style="font-size: smaller;"> Municipal Compound, Poblacion, President Quirino, Sultan Kudarat </span><br><span style="font-size: smaller;"> 09171440838 | 09068082618</span></p></li>
                   </li>
                   <!-- <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
