--- a/maguindanaon-useQ&A.html
+++ b/maguindanaon-useQ&A.html
@@ -239,6 +239,30 @@
           </div>
         </div>
 
+        <div class="container tm-features-section" id="features">
+          <section class="col-sm-12">
+            <header class="tm-feature-header">
+              <h3 class="tm-feature-h"><b>Ngi ganggula umengka gamiten su antibiotics apya dabun babegkatagan taw lun?</b></h3>
+            </header>
+            <p>
+              <ul>
+                <li>Kabenggamit sa dikena nasisita antibiotics na mobalin su antibiotic na di makadtabang du posible na aren bala a epekto a dikena mapya mageram kanu lawas.</li>
+                <li>Dika ibegkagilek i antibiotics, det a gamit ka inyaba sa kanu ngin i det a kabengamit lun du masigu na istidi bun makadtabang sa lekita umengka aden babegkatagan sa moma pan a gay.</li>
+              </ul>
+            </p>
+        </div>
+
+
+        <div class="container tm-features-section" id="features">
+          <section class="col-sm-12">
+            <header class="tm-feature-header">
+              <h3 class="tm-feature-h"><b>Ngin e ganggula umengja di gapasad sa mapya su kapenggamut tanu sa antibiotic?</b></h3>
+            </header>
+            <p>
+              Umengka pedtekaw nngka den bagendan su kabaginum baginum su antibiotic sa dapon mapasad su due nin, na makin belapat su bacteria. Na makin pegkalala su sakit na maka resulta sa kapasangan tanu mag recover na nyanin manggula na su doctor tanu na mapoman menem salekitanu sa bangbangan ah gamot.
+            </p>
+        </div>
+
 
         <div class="col-lg-12">
           <div class="tm-activity-block-text-header">
