major added final revision

--- a/dosanddonts.html
+++ b/dosanddonts.html
@@ -49,13 +49,16 @@
               <div class="collapse navbar-collapse" id="tmMainNav">
                 <ul class="navbar-nav mx-auto tm-navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link external" href="index.html" style="text-align: center;">Antibiotic <br> Use Q&A</a>
+                    <a class="nav-link external" href="index.html" style="text-align: center; font-size: medium;">Antibiotic <br> Use Q&A</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link external" href="infections_common.html" style="text-align: center; font-size: medium;">Management of Low Risk (MILD) Infections in Primary Health Care</a>
+                  </li>
+                  <!-- <li class="nav-item">
                     <a class="nav-link external" href="dosanddonts.html" style="text-align: center;">Antibiotic <br> Do's and Don'ts</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
-                    <p class="nav-link" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br> <span style="font-size: smaller;"> MPXH+5MG, President Quirino, Sultan Kudarat </span><br><span style="font-size: smaller;"> 09171440838 | 09068082618</span></p></li>
+                    <p class="nav-link" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br> <span style="font-size: smaller;"> Municipal Compound, Poblacion, President Quirino, Sultan Kudarat </span><br><span style="font-size: smaller;"> 09171440838 | 09068082618</span></p></li>
                   </li>
                   <!-- <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
@@ -95,10 +98,10 @@
     </section>
 
     <div class="text-center">
-    <a href="dosanddonts_print.html">Print | </a>
-    <a href="tagalog-dosanddonts.html">Tagalog | </a>
-    <a href="ilocano-dosanddonts.html">Ilocano | </a>
-    <a href="maguindanaon-dosanddonts.html">Maguindanaon</a>
+    <!-- <a href="dosanddonts_print.html">Print | </a> -->
+    <!-- <a href="tagalog-dosanddonts.html">Tagalog | </a> -->
+    <a href="ilocano-dosanddonts.html">Ilocano version | </a>
+    <a href="maguindanaon-dosanddonts.html">Maguindanaon version</a>
     </div>
 
     <!-- Features -->
