--- a/ilocano-useQ&A.html
+++ b/ilocano-useQ&A.html
@@ -61,14 +61,17 @@
 
                 <div class="collapse navbar-collapse" id="tmMainNav">
                   <ul class="navbar-nav mx-auto tm-navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link external" href="ilocano-useQ&A.html" style="text-align: center;">Antibiotic Use Q&A</a>
+                    <!-- <li class="nav-item active">
+                      <a class="nav-link external" href="index.html" style="text-align: center;">Antibiotic Use Q&A</a>
+                    </li> -->
+                    <li class="nav-item">
+                      <a class="nav-link external" href="ilocano-dosanddonts.html" style="text-align: center; font-size: medium;">Antibiotic Do's and Don'ts</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link external" href="ilocano-dosanddonts.html" style="text-align: center;">Antibiotic Do's and Don'ts</a>
+                      <a class="nav-link external" href="infections_common.html" style="text-align: center; font-size: medium;">Management of Low Risk (MILD) Infections in Primary Health Care</a>
                     </li>
                     <li class="nav-item">
-                      <p class="nav-link" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br> <span style="font-size: smaller;"> MPXH+5MG, President Quirino, Sultan Kudarat </span><br><span style="font-size: smaller;"> 09171440838 | 09068082618</span></p></li>
+                      <p class="nav-link" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br> <span style="font-size: smaller;"> Municipal Compound, Poblacion, President Quirino, Sultan Kudarat </span><br><span style="font-size: smaller;"> 09171440838 | 09068082618</span></p></li>
                     </li>
                     <!-- <li class="nav-item">
                       <a class="nav-link external" href="maguindanaon.html">Maguindanaon</a>
@@ -115,11 +118,11 @@
     </section>
 
     <div class="text-center">
-      <a href="ilocanouseQ&A_print.html">Print | </a>
-      <a href="index.html">English | </a>
-      <a href="tagalog-useQ&A.html">Tagalog | </a>
+      <!-- <a href="ilocanouseQ&A_print.html">Print | </a> -->
+      <a href="index.html">English version | </a>
+      <!-- <a href="tagalog-useQ&A.html">Tagalog | </a> -->
       <!-- <a href="ilocano-useQ&A.html">Ilocano | </a> -->
-      <a href="maguindanaon-useQ&A.html">Maguindanaon</a>
+      <a href="maguindanaon-useQ&A.html">Maguindanaon version</a>
     </div>
 
     <!-- Features -->
