--- a/index.html
+++ b/index.html
@@ -80,14 +80,17 @@
 
                 <div class="collapse navbar-collapse" id="tmMainNav">
                   <ul class="navbar-nav mx-auto tm-navbar-nav">
-                    <li class="nav-item active">
+                    <!-- <li class="nav-item active">
                       <a class="nav-link external" href="index.html" style="text-align: center;">Antibiotic Use Q&A</a>
+                    </li> -->
+                    <li class="nav-item">
+                      <a class="nav-link external" href="dosanddonts.html" style="text-align: center; font-size: medium;">Antibiotic Do's and Don'ts</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link external" href="dosanddonts.html" style="text-align: center;">Antibiotic Do's and Don'ts</a>
+                      <a class="nav-link external" href="infections_common.html" style="text-align: center; font-size: medium;">Management of Low Risk (MILD) Infections in Primary Health Care</a>
                     </li>
                     <li class="nav-item">
-                      <p class="nav-link" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br> <span style="font-size: smaller;"> MPXH+5MG, President Quirino, Sultan Kudarat </span><br><span style="font-size: smaller;"> 09171440838 | 09068082618</span></p></li>
+                      <p class="nav-link" href="" style="text-align: center; font-size: medium;">Rural Health Unit Contacts : <br> <span style="font-size: smaller;"> Municipal Compound, Poblacion, President Quirino, Sultan Kudarat </span><br><span style="font-size: smaller;"> 09171440838 | 09068082618</span></p></li>
                     </li>
                     <!-- <li class="nav-item">
                       <a class="nav-link external" href="maguindanaon.html">Maguindanaon</a>
@@ -134,8 +137,8 @@
     </section>
 
     <div class="text-center">
-    <a href="useQ&A_print.html">Print | </a>
-    <a href="tagalog-useQ&A.html">Tagalog | </a>
+    <!-- <a href="useQ&A_print.html">Print | </a> -->
+    <!-- <a href="index.html">English | </a> -->
     <a href="ilocano-useQ&A.html">Ilocano | </a>
     <a href="maguindanaon-useQ&A.html">Maguindanaon</a>
     </div>
